<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewC203"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c203" />

    <TextView
        android:id="@+id/textViewC206"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c206" />

    <TextView
        android:id="@+id/textViewC218"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c218" />

    <TextView
        android:id="@+id/textViewC235"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c235" />

    <TextView
        android:id="@+id/textViewC346"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c346" />

    <TextView
        android:id="@+id/textViewG956"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/g956" />

</LinearLayout>